# minimal-relational-db

./: .gitignore  CMakeLists.txt  README.md
module/: FindPROTOBUF-C.cmake
src/: main.c
src/client/: client.c  client.h  parser.c  parser.h
src/client/lexer/: a.out  lex.yy.c  lex.yy.h  sql_lexer.lex  sql_parser.yacc  y.tab.c  y.tab.h
src/common/: column_value.pb-c.c  column_value.pb-c.h  column_value.proto  net.c  net.h  net.pb-c.c  net.pb-c.h  net.proto  request.pb-c.c  request.pb-c.h  request.proto  response.pb-c.c  response.pb-c.h  response.proto  utils.c  utils.h
src/cursor/: cursor.c  cursor.h
src/server/: server.c  server.h
